--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
 streamlit
-requests
-beautifulsoup4
-langchain
-langchain-google-genai
-faiss-cpu
-PyPDF2
+pdfplumber
 pytesseract
 pillow
-pandas
-langchain-community
-langchain-groq
-langchain-huggingface
+PyPDF2
+fitz
+PyMuPDF
+langchain
 langchain-core
+langchain-community
 langchain-text-splitters
+langchain-huggingface
+langchain-groq
+langchain_huggingface
 sentence-transformers
-pytesseract
-
+faiss-cpu
+pdfminer.six
+beautifulsoup4
+pandas
+requests
