--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
 streamlit
 pdfplumber
-pytesseract
-pillow
 PyPDF2
-fitz
-PyMuPDF
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-langchain-huggingface
-langchain-groq
-langchain_huggingface
-sentence-transformers
-faiss-cpu
-pdfminer.six
-beautifulsoup4
+pymupdf
+pillow
+pytesseract
+opencv-python
+numpy
 pandas
-requests
-opencv-python-headless
+beautifulsoup4
+langchain
+langchain-huggingface
+langchain-community
+langchain-groq
+faiss-cpu
+sentence-transformers
 python-dotenv
-pymongo
-pymilvus
-gridfs
