--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,14 @@
-# ---------------------------------------
-# CORE DEPENDENCIES
-# ---------------------------------------
 streamlit
-gradio
-python-dotenv
-uuid
-tqdm
-regex
-
-# ---------------------------------------
-# PDF, OCR, AND IMAGE PROCESSING
-# ---------------------------------------
 pdfplumber
 PyPDF2
 PyMuPDF
 Pillow
-pytesseract
-opencv-python-headless
-unstructured[all-docs]
-lxml
-beautifulsoup4
-IPython 
-
-# ---------------------------------------
-# DATA & NUMPY UTILITIES
-# ---------------------------------------
-numpy
-pandas
-
-# ---------------------------------------
-# LANGCHAIN ECOSYSTEM (Groq + Gemini + HuggingFace)
-# ---------------------------------------
-langchain
-langchain-core
-langchain-community
 langchain-huggingface
 langchain-text-splitters
+langchain-core
 langchain-groq
-langchain-google-genai
-langchain-openai    # for compatibility (some LangChain utils depend on this)
-
-# ---------------------------------------
-# EMBEDDINGS & VECTOR DATABASES
-# ---------------------------------------
+langchain-community
+pandas
+vllm
 sentence-transformers
 faiss-cpu
-chromadb
-pymilvus
-pymongo
-
-# ---------------------------------------
-# TOKENIZATION / UTILITIES
-# ---------------------------------------
-tiktoken
-
-# ---------------------------------------
-# GOOGLE GEMINI API
-# ---------------------------------------
-google-generativeai
-
-# ---------------------------------------
-# OPTIONAL UTILITIES
-# ---------------------------------------
-requests
-fastapi
-uvicorn
